syntax = "proto3";

package com.linbit.linstor.proto.javainternal.c2s;
import "javainternal/c2s/IntS3Remote.proto";

// Internal message to apply a single s3 remote
message MsgIntApplyS3Remote
{
    IntS3Remote s3remote = 1;
    sint64 full_sync_id = 2;
    sint64 update_id = 3;
}